# domerger

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  build-all.sh  windows-toolchain.cmake
gamedata/: NOTICE
inc/: arg_parser.h  constants.h  gamedata_manager.h  logging.h  merge_rules.h  utils.h
src/: arg_parser.cpp  gamedata_manager.cpp  logging.cpp  main.cpp  merge_rules.cpp  utils.cpp
